# OClaw

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  config.example.json  main.py  pyproject.toml
clients/cli/: app.py
core/: __init__.py  agent.py  config.py  context.py  sessions.py  skills.py  tools.py
core/agent/: __init__.py  agent.py  chunk_dispatcher.py  message_builder.py  session_orchestrator.py  tool_execution_handler.py  types.py
core/providers/: anthropic.py  base.py  manager.py  ollama.py  openai.py
docs/: architecture.md  configuration.md  development.md  event-stream-protocol.md
server/: __init__.py  gateway.py  worker.py
skills/skill-creator/: SKILL.md
skills/skill-creator/references/: output-patterns.md  workflows.md
skills/skill-creator/scripts/: init_skill.py
tests/: conftest.py  test_agent.py  test_api.py  test_config.py  test_sessions.py  test_skills.py  test_tools.py
tests/fixtures/config/: test_config.json
tests/fixtures/sessions/: sample_session.jsonl
tests/fixtures/skills/test_skill/: SKILL.md
tests/fixtures/tools/: test_tool.py
tests/test_providers/: __init__.py  test_anthropic.py  test_ollama.py  test_openai.py
tools/: execute_shell.py  load_tool.py  read_file.py  unload_tool.py  write_file.py
